ajustes no estilo da tabela

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="table-wrapper">
         <table class="fl-table">
-            <thead>
+            <thead class="tbl-header">
                 <tr>
                     <th>Título</th>
                     <th>Descrição</th>
@@ -54,7 +54,7 @@
                     <th>Valor</th>
                 </tr>
             </thead>
-            <tbody id="corpo_tabela">
+            <tbody class="tbl-content" id="corpo_tabela">
                 <!--<tr>
                     <td>Content 1</td>
                     <td>Content 1</td>
