--- a/index.html
+++ b/index.html
@@ -1,68 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="style.css">
-    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
-    <title>Warren</title>
-</head>
-<body>
-    <h2>Responsive Table</h2>
-    <div id="myModal" class="modal">
-        <div id="modal-content" class="modal-content">
-            <span class="close">&times;</span>
-            <h1 id="modal-title"></h1>
-            <div id="modal-progresso" class="prog">
-                <span class="ball-externa">
-                    <span id="modal-1" data-content="" class="ball"></span>
-                </span>
-                <span id="modal-2" class="reta"></span>
-                <span class="ball-externa">
-                    <span id="modal-3" data-content="" class="ball"></span>
-                </span>
-                <span id="modal-4" class="reta"></span>
-                <span class="ball-externa">
-                    <span id="modal-5" data-content="" class="ball"></span>
-                </span>
-            </div>
-            <div class="separador">
-                <span>Transferência:</span>
-                <span id="modal-valor"></span>
-            </div>
-            <div class="separador">
-                <span>De: </span>
-                <span id="modal-de"></span>
-            </div>
-            <div class="separador">
-                <span>Para: </span>
-                <span id="modal-para"></span>
-            </div>
-        </div>
-    </div>
-    <div class="table-wrapper">
-        <table class="fl-table">
-            <thead class="tbl-header">
-                <tr>
-                    <th>Título</th>
-                    <th>Descrição</th>
-                    <th>Status</th>
-                    <th>Valor</th>
-                </tr>
-            </thead>
-            <tbody class="tbl-content" id="corpo_tabela">
-                <!--<tr>
-                    <td>Content 1</td>
-                    <td>Content 1</td>
-                    <td>Content 1</td>
-                    <td>Content 1</td>
-                </tr>-->
-            </tbody>
-        </table>
-    </div>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
